tests/script_errors/pp_cyclic/error.txt
Error: 
      | ^ Cyclic dependency detected: tests/script_errors/pp_cyclic/script.tremor -> tests/script_errors/pp_cyclic/script.tremor
